--- a/src/CSS/estilo.css
+++ b/src/CSS/estilo.css
@@ -1,5 +1,55 @@
 @charset "UTF-08";
 
+
+@media screen and (max-width: 800px) {
+    aside h1 {
+        display: none;
+    }
+
+    body img {
+        margin-left: -50px;
+        width: 300px;
+        height: 300px;
+    }
+
+    body div#info {
+        justify-content: left;
+        width: 90%;
+        height: 200px;
+        margin-left: unset;
+        margin-top: 5%;
+        color: black;
+    }
+
+    body a {
+        background: white;
+        color: black;
+    }
+
+    body div#info p {
+        font-size: 0.7em;
+    }
+
+    h1 {
+        font-size: 0.9em;
+    }
+
+    body main {
+        justify-content: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background: gold;
+    } 
+
+
+    body aside {
+        justify-content: center;
+        position: absolute;
+        background: unset;
+    }
+
+}
+
+
 * {
     margin: 0;
 }
@@ -45,7 +95,7 @@ div#info {
     display: flex;
     justify-content: right;
     align-items: center;
-    width: 500px;
+    width: 40%;
     height: 200px;
     flex-direction: column;
     margin-left: 100px;
@@ -62,18 +112,3 @@ a {
 }
 
 
-div#extra {
-    position: absolute;
-    display: flex;
-    align-items: flex-end;
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    justify-content: center;
-}
-body div#extra a#trailer {
-    text-decoration: underline;
-    color: gold;
-    border: unset;
-    box-shadow: unset;
-}
